# design-patterns

./: CMakeLists.txt  README.md
adapter/: CMakeLists.txt
adapter/class_adapter/: CMakeLists.txt
adapter/class_adapter/include/: TurkeyInterface.hpp  WildTurkeyAdapter.hpp
adapter/class_adapter/include/ducks/: MaillardDuck.hpp
adapter/class_adapter/include/turkeys/: WildTurkey.hpp
adapter/class_adapter/src/: main.cpp
adapter/class_adapter/test/: test_DuckTurkey.cpp
adapter/object_adapter/: CMakeLists.txt
adapter/object_adapter/include/: DuckAdapter.hpp  DuckInterface.hpp  TurkeyAdapter.hpp
adapter/object_adapter/src/: main.cpp
adapter/object_adapter/test/: test_DuckTurkey.cpp
command/: CMakeLists.txt
command/include/: CommandInterface.hpp  RemoteController.hpp  SimpleRemoteController.hpp
command/include/commands/: DoorCloseCommand.hpp  DoorOpenCommand.hpp  FanHighCommand.hpp  FanLowCommand.hpp  FanMediumCommand.hpp  FanOffCommand.hpp  LightOffCommand.hpp  LightOnCommand.hpp  MacroCommand.hpp  NoCommand.hpp
command/include/gadgets/: Door.hpp  Fan.hpp  GarageDoor.hpp  Light.hpp
command/src/: RemoteController.cpp  SimpleRemoteController.cpp
command/test/: test_RemoteController.cpp  test_SimpleRemoteController.cpp
decorator/: CMakeLists.txt
decorator/include/: Beverage.hpp  Coffee.hpp  CondimentDecorator.hpp  Milk.hpp  Mocha.hpp  Tea.hpp
decorator/src/: Coffee.cpp  CondimentDecorator.cpp  Milk.cpp  Mocha.cpp  Tea.cpp
decorator/test/: test_Beverage.cpp  test_CondimentDecorator.cpp
facade/: CMakeLists.txt
facade/include/: Amplifier.hpp  HomeTheatherFacade.hpp  Lights.hpp  Projector.hpp  Screen.hpp
facade/src/: HomeTheatherClient.cpp
factory/: CMakeLists.txt
factory/abstract_factory/: CMakeLists.txt
factory/abstract_factory/include/: ChairInterface.hpp  FurnitureClient.hpp  FurnitureFactory.hpp  TableInterface.hpp
factory/abstract_factory/include/chairs/: ModernChair.hpp  VictorianChair.hpp
factory/abstract_factory/include/factories/: ModernFurnitureFactory.hpp  VictorianFurnitureFactory.hpp
factory/abstract_factory/include/tables/: ModernTable.hpp  VictorianTable.hpp
factory/abstract_factory/src/: FurnitureMain.cpp
factory/factory_method/: CMakeLists.txt
factory/factory_method/include/: PizzaInterface.hpp  PizzaStore.hpp
factory/factory_method/include/pizzas/: Cheese.hpp  Peperoni.hpp
factory/factory_method/include/stores/: ChicagoPizzaStore.hpp  NYPizzaStore.hpp
factory/factory_method/src/: PizzaStore.cpp
factory/factory_method/src/pizzas/: Cheese.cpp
factory/factory_method/src/stores/: ChicagoPizzaStore.cpp  NYPizzaStore.cpp
factory/factory_method/test/: main.cpp  test_PizzaStore.cpp
factory/simple_factory/: CMakeLists.txt
factory/simple_factory/include/: PizzaInterface.hpp  PizzaStore.hpp  SimplePizzaFactory.hpp
factory/simple_factory/include/pizzas/: Cheese.hpp  Peperoni.hpp
factory/simple_factory/src/: PizzaInterface.cpp  PizzaStore.cpp  SimplePizzaFactory.cpp
factory/simple_factory/src/pizzas/: Peperoni.cpp
factory/simple_factory/test/: test_PizzaStore.cpp  test_SimplePizzaFactory.cpp
observer/: CMakeLists.txt
observer/include/: DisplayElementInterface.hpp  ObserverPattern.hpp  WeatherData.hpp  WeatherDataResult.hpp
observer/include/display/: CurrentConditionDisplay.hpp  WeatherStatsDisplay.hpp
observer/src/: CurrentConditionDisplay.cpp  WeatherData.cpp  WeatherStatsDisplay.cpp
observer/test/: test_WeatherData.cpp
singleton/: CMakeLists.txt
singleton/multi_thread/: CMakeLists.txt
singleton/multi_thread/include/: Singleton.hpp
singleton/multi_thread/src/: Singleton.cpp  main.cpp
singleton/multi_thread/test/: test_Singleton.cpp
singleton/single_thread/: CMakeLists.txt
singleton/single_thread/include/: Singleton.hpp
singleton/single_thread/src/: Singleton.cpp
singleton/single_thread/test/: test_Singleton.cpp
strategy/: CMakeLists.txt
strategy/include/: Archer.hpp  Character.hpp  GunBehavior.hpp  King.hpp  SwordBehavior.hpp  WeaponBehaviorInterface.hpp
strategy/src/: Archer.cpp  GunBehavior.cpp  King.cpp  SwordBehavior.cpp
strategy/test/: test_Character.cpp  test_WeaponBehavior.cpp
template_method/: CMakeLists.txt
template_method/include/: CaffeineBeverage.hpp  Coffee.hpp  Tea.hpp
template_method/src/: CaffeineBeverage.cpp  Coffee.cpp  Tea.cpp
template_method/test/: test_CaffeineBeverage.cpp
